--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon server.js",
-    "client": "npm run dev --prefix frontend"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
